--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,14 @@ python-docx==0.8.11
 python-pptx==0.6.21
 aspose.slides==22.8.0
 openpyxl==1.1.0
+seaborn==0.12.1
+matplotlib==3.5.2
+matplotlib-inline==0.1.3
+sklearn==0.0
+tensorflow==2.9.1
+tensorflow-estimator==2.9.0
+tensorflow-io-gcs-filesystem==0.26.0
+keras==2.9.0
+keras-models==0.0.7
+keras_preprocessing==1.1.2
+numpy==1.22.4
