--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ openpyxl==1.1.0
 seaborn==0.12.1
 matplotlib==3.5.2
 matplotlib-inline==0.1.3
-sklearn==0.0
+scikit-learn==1.1.2
 tensorflow==2.9.1
 tensorflow-estimator==2.9.0
 tensorflow-io-gcs-filesystem==0.26.0
